# cores3_midiunit_test

./: README.md  merge.sh  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  es8388.cpp  es8388.h  esxxx_common.h  main.cpp
main/resources/: canon.pcm
